--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">POS_NetworkToolSuite</string>
     <string name="connect">Connecting to SSH Server</string>
-    <string name="message">test</string>
-    <string name="ok">test</string>
-    <string name="cancel">test</string>
+    <string name="message">Please enter credentials below!</string>
+    <string name="ok">Connect</string>
+    <string name="cancel">Cancel</string>
 </resources>
